--- a/templates/main.html
+++ b/templates/main.html
@@ -1,10 +1,14 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>Title</title>
-</head>
-<body>
-    Hello React world!
-</body>
+<html>
+    <head>
+        <title>Hello world</title>
+    </head>
+    <body>
+        <div id="view">
+
+        </div>
+        <script src="https://unpkg.com/react@15/dist/react.js"></script>
+        <script src="https://unpkg.com/react-dom@15/dist/react-dom.js"></script>
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/babel-core/5.8.34/browser.min.js"></script>
+        <script type="text/babel" src="{{ static_url('app.jsx') }}"></script>
+    </body>
 </html>
